# ChangeLog for app-shells/bash
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.412 2014/10/03 17:17:46 klausman Exp $

  03 Oct 2014; Tobias Klausmann <klausman@gentoo.org> bash-3.1_p22.ebuild,
  bash-3.2_p56.ebuild, bash-4.0_p43.ebuild, bash-4.1_p16.ebuild,
  bash-4.2_p52.ebuild:
  Stable on alpha for security bug 524256

*bash-4.3_p29 (03 Oct 2014)
*bash-4.2_p52 (03 Oct 2014)
*bash-4.1_p16 (03 Oct 2014)
*bash-4.0_p43 (03 Oct 2014)
*bash-3.2_p56 (03 Oct 2014)
*bash-3.1_p22 (03 Oct 2014)

  03 Oct 2014; Lars Wendler <polynomial-c@gentoo.org> +bash-3.1_p22.ebuild,
  +bash-3.2_p56.ebuild, +bash-4.0_p43.ebuild, +bash-4.1_p16.ebuild,
  +bash-4.2_p52.ebuild, -bash-4.3_p28.ebuild, +bash-4.3_p29.ebuild:
  Security bump (bug #524256). Should fix CVE-2014-6277.

  03 Oct 2014; Lars Wendler <polynomial-c@gentoo.org> -bash-3.1_p20.ebuild,
  -bash-3.2_p54.ebuild, -bash-4.0_p41.ebuild, -bash-4.1_p14.ebuild,
  -bash-4.2_p50.ebuild:
  Removed old versions.

  03 Oct 2014; Raúl Porcel <armin76@gentoo.org> bash-3.1_p21.ebuild,
  bash-3.2_p55.ebuild, bash-4.0_p42.ebuild:
  arm64/m68k/s390 stable

  02 Oct 2014; Agostino Sarubbo <ago@gentoo.org> bash-3.1_p21.ebuild,
  bash-3.2_p55.ebuild, bash-4.0_p42.ebuild, bash-4.1_p15.ebuild,
  bash-4.2_p51.ebuild:
  Stable for alpha/amd64/arm/ia64/ppc/ppc64/sparc/sh/x86 wrt the security bug
  #523742

  02 Oct 2014; Raúl Porcel <armin76@gentoo.org> bash-4.1_p15.ebuild:
  s390 stable

  02 Oct 2014; Raúl Porcel <armin76@gentoo.org> bash-4.1_p15.ebuild,
  bash-4.2_p51.ebuild:
  arm64/m68k stable

  02 Oct 2014; Jeroen Roovers <jer@gentoo.org> bash-3.1_p21.ebuild,
  bash-3.2_p55.ebuild, bash-4.0_p42.ebuild, bash-4.1_p15.ebuild,
  bash-4.2_p51.ebuild:
  Stable for HPPA (bug #523742).

*bash-4.3_p28 (01 Oct 2014)
*bash-4.2_p51 (01 Oct 2014)
*bash-4.1_p15 (01 Oct 2014)
*bash-4.0_p42 (01 Oct 2014)
*bash-3.2_p55 (01 Oct 2014)
*bash-3.1_p21 (01 Oct 2014)
